pixel shifting bug fix

--- a/src/containers/Quiz.css
+++ b/src/containers/Quiz.css
@@ -18,15 +18,23 @@
 }
 
 .video-js .vjs-control-bar {
-    background-color: (62 48 57 / 49%);
+    background-color: transparent;
 }
 
 .video-js .vjs-fullscreen-control, .video-js .vjs-progress-control, .video-js .vjs-volume-panel, .video-js .vjs-play-control {
-    color: rgb(255, 0, 0);
+    color: rgba(255, 0, 0, 0.95);
+}
+
+.video-js .vjs-play-progress {
+    background-color: rgba(255, 0, 0, 0.95);
 }
 
 .vjs-error .vjs-error-display .vjs-modal-dialog-content {
     padding-top: 160px;
+}
+
+.video-js .vjs-big-play-button {
+    display: none;
 }
 
 /***/
